tests/errors/macro/parser_set_need_ident/long_comment_behind_define.c
#define /* long 
comment */

int main()
{
	return 0;
}
